Fix z-index issue of context-menu

--- a/trunk/admin/css/minicomposer-admin.css
+++ b/trunk/admin/css/minicomposer-admin.css
@@ -121,6 +121,8 @@
   margin-bottom: 20px;
   padding: 20px 15px 10px;
   font-size: 0;
+
+  z-index: 50;
 }
 
 .minicomposer-row:after {
@@ -392,4 +394,9 @@
   margin-right: 3px;
   padding: 0 7px;
   font-weight: bold;
+}
+
+
+.is-contextmenu-parent {
+  z-index: 120;
 }
